--- a/style.css
+++ b/style.css
@@ -7,16 +7,15 @@ body {
 }
 
 .container {
-    background: white;
+    background: rgb(255, 255, 255);
     padding: 40px;
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    position: relative;
-    overflow: hidden;
+ 
 
-max-width: fit-content;
-margin-left: auto;
-margin-right: auto;
+ size: 300px;
+ 
+ 
 }
 
 .school-logo {
@@ -77,21 +76,26 @@ button:hover {
 }
 
 #result {
-    margin-top: 20px;
+margin: 20px;
+ 
 }
 
 .message {
     color: red;
-    margin-top: 10px;
+ 
+margin-top: 10px;
+
 }
 
 
 
 .instructions {
-    margin-top: 30px;
-    padding: 20px;
+ size: 70%;
+    padding: 5px;
     background: #F5F5F5;
     border-radius: 8px;
+    margin: -9px;
+    margin-top: 15px;
 }
 
 .instructions h3 {
@@ -104,7 +108,7 @@ button:hover {
 }
 
 .instructions li {
-    margin: 10px 0;
+    margin: 10px ;
     color: #666;
     position: relative;
     padding-right: 20px;
@@ -115,4 +119,8 @@ button:hover {
     color: #2196F3;
     position: absolute;
     right: 0;
+    
 }
+
+
+
